--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+/*  added in  */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+
+body {
+  background-color: #ffffff; 
+  background-image: 
+    linear-gradient(to right, #000000 4px, transparent 1px),
+    linear-gradient(to right, #ffffff 75px, transparent 1px),
+    linear-gradient(to left, #ffffff 75px, transparent 1px),
+    radial-gradient(circle, #b6babf 1px, transparent 1px);
+  background-size: 4px 100%, 75px 100%, 75px 100%, 15px 15px; 
+  background-position: 75px 0, 0 0, 100% 0, 0 0;
+  background-repeat: no-repeat, no-repeat, no-repeat, repeat;
+  background-attachment: scroll; 
+  color: #333; 
+  font-family: 'Inter', sans-serif; 
+  margin: 0;
+  padding: 0;
+}
